--- a/index.html
+++ b/index.html
@@ -4,20 +4,83 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Chris Carty Task</title>
+        <title>Red Snapper Task</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css" type="text/css">
         <link rel="icon" href="favicon.png" />
     </head>
     <body>
-        
 
-        <h1>Hello!</h1>
+        <main id="user-profile-wrapper">
 
+            <div id="nav">
+                <img id="white-arrow-icon" src="Media/SVG/white-arrow.svg" alt="back arrow">
+                <div class="go-back"><h6>Back</h6></div>
+            </div>
 
-        
-        <script src="" async defer></script>
+            <div id="user-profile-img">
+                <img src="Media/JPG/steve-jobs.jpg" alt="Steve Jobs presenting keynote">
+            </div>
+
+            <div id="user-info">
+                <table>
+                    <tr class="border_bottom" colspan="3">
+                        <td colspan="2">
+                            <h1>Steve Jobs</h1>
+                            <div class="inline">
+                                <div><img id="plus-icon" src="Media/SVG/plus-icon.svg"></div>
+                                <div><h4>FOLLOW</h4></div>
+                            <div>
+                        </td>
+                        <td class="align-right vertical-align">
+                            <img id="more-icon" src="Media/SVG/more-icon.svg">
+                        </td>
+                    </tr>
+                    <tr class="border_bottom">
+                        <td class="align-center">
+                            <h3>313</h3><span><h4>PATENTS</h4></span>
+                        </td>
+                        <td class="align-center">
+                            <h3>1M 50K</h3><span><h4>FOLLOWERS</h4></span>
+                        </td>
+                        <td class="align-center">
+                            <h3>361</h3><span><h4>FOLLOWING</h4></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">
+                            <h4 id="categories-text">CATEGORIES</h4>
+                        </td>
+                    </tr>
+                    <tr class="border_bottom">
+                        <td colspan="2">
+                            <h2>Electronic devices</h2>
+                        </td>
+                        <td class="align-right">
+                            <img class="purple-arrow-icon" src="Media/SVG/purple-arrow.svg">
+                        </td>
+                    </tr>
+                    <tr class="border_bottom">
+                        <td colspan="2">
+                            <h2>Design</h2>
+                        </td>
+                        <td class="align-right">
+                            <img class="purple-arrow-icon" src="Media/SVG/purple-arrow.svg">
+                        </td>
+                    </tr>
+                    <tr class="border_bottom">
+                        <td colspan="2">
+                            <h2>Transportation</h2>
+                        </td>
+                        <td class="align-right">
+                            <img class="purple-arrow-icon" src="Media/SVG/purple-arrow.svg">
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+        </main>
     </body>
 </html>
 
