--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Red Snapper Task</title>
-        <meta name="description" content="">
+        <meta name="description" content="Chris Carty task submission for Red Snapper Junior Dev Role">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css" type="text/css">
         <link rel="icon" href="favicon.png" />
@@ -79,7 +79,7 @@
                     </tr>
                 </table>
             </div>
-
+    
         </main>
     </body>
 </html>
