--- a/index.html
+++ b/index.html
@@ -32,22 +32,37 @@
                         <tr class="border-bottom hover-highlight">
                             <td><h5>1.</h5></td>
                             <td><h5>Steve Jobs</h5></td>
+                            <td class="align-right">
+                                <img class="go-to-icon" src="Media/SVG/go-to.svg">
+                            </td>
                         </tr>
                         <tr class="border-bottom hover-highlight">
                             <td><h5>2.</h5></td>
-                            <td><h5>Whitney Wolfe Herd</h5></td>
+                            <td><h5>Whitney Wolfe</h5></td>
+                            <td class="align-right">
+                                <img class="go-to-icon" src="Media/SVG/go-to.svg">
+                            </td>
                         </tr>
                         <tr class="border-bottom hover-highlight">
                             <td><h5>3.</h5></td>
                             <td><h5>Elon Musk</h5></td>
+                            <td class="align-right">
+                                <img class="go-to-icon" src="Media/SVG/go-to.svg">
+                            </td>
                         </tr>
                         <tr class="border-bottom hover-highlight">
                             <td><h5>4.</h5></td>
                             <td><h5>Sundar Pichai</h5></td>
+                            <td class="align-right">
+                                <img class="go-to-icon" src="Media/SVG/go-to.svg">
+                            </td>
                         </tr>
                         <tr class="border-bottom hover-highlight">
                             <td><h5>5.</h5></td>
                             <td><h5>Susan Wojcicki</h5></td>
+                            <td class="align-right">
+                                <img class="go-to-icon" src="Media/SVG/go-to.svg">
+                            </td>
                         </tr>
                     </table>
                 </div>
@@ -124,6 +139,8 @@
             </section>
 
             <section class="user-profile-wrapper2">
+
+                <div class="show-more">Popular Today</div>
 
                 <div class="user-profile-img">
                     <img src="Media/JPG/sundar.jpg" alt="Steve Jobs presenting keynote">
